--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h2>Login</h2>
         <select id="department">
           <option value="">Select Department</option>
-          <option value="CSE">CSE</option>
+          <option value="CSE">Aptitude</option>
           <option value="Management">Management</option>
           <option value="Accounting">Accounting</option>
           <option value="Economics">Economics</option>
