--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="main-panel">
       <div id="login" class="login active">
-        <h1>Wel Come To CBE EXit Exam Practice </h1>
+        <h1>Wel Come To CBE Exit Exam Practice </h1>
         <h3>Select your department, enter user name and password, select question and hit 'login'!</h3>
         <h2>Login</h2>
         <select id="department">
