--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <option value="">Select Department</option>
           <option value="CSE">Aptitude</option>
           <option value="Management">Management</option>
-          <option value="Accounting">Accounting</option>
+          <option value="Accounting">Accounting and Finance</option>
           <option value="Economics">Economics</option>
         </select>
         <input type="text" id="username" placeholder="Username">
