--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
           <option value="v5">Exit Exam 2</option>
           <option value="v6">Exit Exam 3</option>
         </select>
-        <button onclick="login()">Login</button></br>
-        <a href="mailto:dan7get@gmail.com">Send email</a>
+        <button onclick="login()">Login</button>
       </div>
       <div id="quiz" class="quiz" style="display:none;">
         <div class="timer">Time left: <span id="time">00:00</span></div>
