--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
           <option value="v5">Exit Exam 2</option>
           <option value="v6">Exit Exam 3</option>
         </select>
-        <button onclick="login()">Login</button>
+        <button onclick="login()">Login</button></br>
+        <a href="mailto:dan7get@gmail.com?subject=Hello%20from%20Astra&body=Write%20your%20message%20here">Send Email</a>
+
+
       </div>
       <div id="quiz" class="quiz" style="display:none;">
         <div class="timer">Time left: <span id="time">00:00</span></div>
@@ -1389,20 +1392,25 @@ function login() {
 
 function renderQuestion() {
   const q = questions[current];
-  let html = `<h3>Q${current+1}</h3><p>${q.q}</p><div style="display: flex; gap: 20px;">`;
-  
+  const letters = ['A', 'B', 'C', 'D'];
+  let html = `
+    <h3>Q${current + 1}</h3>
+    <p style="margin-bottom: 12px;">${q.q}</p>
+    <div style="display: flex; flex-direction: column; gap: 12px;">`;
+
   q.options.forEach((opt, i) => {
+    const isSelected = userAnswers[current] === i;
     html += `
-      <label style="display: flex; align-items: center; gap: 5px; border: 1px solid #ddd; padding: 5px 10px; border-radius: 4px;">
-        <input type='radio' name='q' value='${i}' 
-               ${userAnswers[current] === i ? 'checked' : ''} 
-               onchange='submitAnswer(${i})'>
-        ${opt}
-      </label>`;
+    <div style=" display: flex; margin: .25rem 0; margin-top: 0.25rem; margin-right: 0px; margin-bottom: 0.25rem; margin-left: 0px; align-items: flex-start;">
+        <label>       
+          <input type="radio" name="q" style="margin: .3rem .5rem; width: 14px;  flex-shrink: 0;}"value="${i}" ${isSelected ? "checked" : ""} onchange="submitAnswer(${i})">
+          <strong>${letters[i]}.</strong> ${opt}
+       </label>
+      </div>`;
   });
-  
+
   html += `</div>`;
-  document.getElementById('questionBox').innerHTML = html;
+  document.getElementById("questionBox").innerHTML = html;
   renderNav();
 }
 
