--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       margin-bottom: 20px;
       padding: 15px;
       border: 1px solid #ccc;
-      background-color: #fdfdfd;
+      background-color: #e7f3f5;
       border-radius: 6px;
     }
     .navigation-buttons {
@@ -132,7 +132,11 @@
 <body>
   <div class="container">
     <div class="left-panel" id="leftPanel">
-      <button class="flag-btn" onclick="toggleFlag()">Flag/Unflag Question</button>
+    <h3 id="currentQuestionLabel">Question</h3>
+    <p id="answerStatus">Not yet answered</p>
+    <p>Marked out of 1.00</p>
+    <button class="flag-btn" onclick="toggleFlag()" id="flagButton">🚩Flag Question</button>
+
     </div>
     <div class="main-panel">
       <div id="login" class="login active">
@@ -1377,6 +1381,7 @@ function login() {
       show("quiz");
       if(version=='v1' || version=='v2' || version=='v3'){startTimer(30 * 60);}else{startTimer(180 * 60);}
       renderQuestion();
+      renderLeftPanel();
       renderNav();
       document.getElementById("leftPanel").style.display = "block";
       document.getElementById("rightPanel").style.display = "block";
@@ -1394,8 +1399,7 @@ function renderQuestion() {
   const q = questions[current];
   const letters = ['A', 'B', 'C', 'D'];
   let html = `
-    <h3>Q${current + 1}</h3>
-    <p style="margin-bottom: 12px;">${q.q}</p>
+    <h3>#${current + 1}</h3> ${q.q}
     <div style="display: flex; flex-direction: column; gap: 12px;">`;
 
   q.options.forEach((opt, i) => {
@@ -1411,14 +1415,37 @@ function renderQuestion() {
 
   html += `</div>`;
   document.getElementById("questionBox").innerHTML = html;
+  renderLeftPanel();
   renderNav();
 }
 
 function nextQuestion() { if (current < questions.length - 1) { current++; renderQuestion(); } }
 function prevQuestion() { if (current > 0) { current--; renderQuestion(); } }
-function submitAnswer(val) { userAnswers[current] = val; renderNav(); }
+function submitAnswer(val) { userAnswers[current] = val; renderNav(); renderLeftPanel();}
 
-function toggleFlag() { flagged[current] = !flagged[current]; renderNav(); }
+function toggleFlag() { flagged[current] = !flagged[current]; renderNav(); renderLeftPanel();}
+
+function renderLeftPanel() {
+  
+  // Show question number
+  document.getElementById("currentQuestionLabel").innerText = `Question ${current + 1}`;
+
+  // Update flag/unflag button
+  if (flagged[current]) {
+    document.getElementById("flagButton").innerText = "🚩Remove Flag";
+  } else {
+    document.getElementById("flagButton").innerText = "🚩Flag Question";
+  }
+
+  // Show answer status
+  if (userAnswers[current] !== null && userAnswers[current] !== undefined) {
+    document.getElementById("answerStatus").innerText = "Answer Saved";
+  } else {
+    document.getElementById("answerStatus").innerText = "Not Yet Answered";
+  }
+  renderNav();
+}
+
 
 function renderNav() {
   let html = '';
