--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <option value="v3">Self Quiz 3</option>
           <option value="v4">Exit Exam 1</option>
           <option value="v5">Exit Exam 2</option>
-          <option value="v6">Exit Exam 3</option>
+          <option value="v6">Model Exam </option>
         </select>
         <button onclick="login()">Login</button></br>
         <a href="mailto:dan7get@gmail.com?subject=Hello%20from%20Astra&body=Write%20your%20message%20here">Send Email</a>
@@ -1088,7 +1088,137 @@ Management: {
     {      q: "The cash conversion cycle measures:",      options: [        "Time from cash payment to cash receipt",        "Only inventory days",        "Only receivables days",        "Only payables days"      ],      answer: 1    }
       ],
       v6:[
-
+    
+     {      q: "Joint control exists where:",    
+options: ["A. The decisions in areas essential to the goals of the joint arrangement do not require the consent of the partie",        
+	  "B. One party alone has power to control the strategic operating decisions of the joint arrangement",
+	  "C. No single party is in a position to control the activity unilaterally",        
+	  "D. No one party may be appointed as the manager of the joint arrangement"  ], answer: 2    },
+ {      q: "A Corporation had net income of Birr 50,000 in 2019 and Birr 60,000 in 2020, excluding any income from its investment in B Company. B Company had net income of Birr 30,000 in 2019 and Birr 40,000 in 2020. On January 1, 2020, A Corporation acquired all of the outstanding common shares of B Company for a cash payment of Birr 300,000. Assume that there was no acquisition differential on this business combination.What net income would A Corporation report for 2020 in its comparative consolidated financial statements at the end of 2020?",    
+options: ["A. Birr 40,000",        
+	  "B. Birr 100,000",
+	  "C. Birr 80,000",        
+	  "D. Birr 60,000"  ], answer: 1    },
+ {      q: "Which one of the following is NOT the duty of the Board of Directors of a Share Company?",    
+options: ["A. Controlling the day-to-day activities of the operations",        
+	  "B. Authorizing contracts & setting executive salaries",
+	  "C. Declaration of dividend",        
+	  "D. Arranging major loans with banks"  ], answer: 0    },
+ {      q: "Under which of the following set of circumstances might the auditors disclaim an opinion?",    
+options: ["A. The financial statements contain a departure from accepted accounting principles, with a material effect",        
+	  "B. When the portion of the financial statement audited by the other audit firm is material in relation to the whole.",
+	  "C. There are significant scope limitations on the audit",        
+	  "D. The method of application of accounting principles is not consistent."  ], answer: 0    },
+ {      q: "Permitting only designated personnel to handle cash receipts is an application of the principle of:", 
+options: ["A. Independent internal verification",        
+	  "B. Establishment of responsibility",
+	  "C. Segregation of duties",        
+	  "D. Human resource controls"  ], answer: 1    },
+ {      q: "The process of turning money that is derived from criminal activities-dirty money-into-money which appears to have been legitimately acquired and which can therefore be more easily invested and spent is called:",
+options: ["A. Market Abuse",        
+	  "B. Money laundering",
+	  "C. Insider Trading",        
+	  "D. Market manipulation"  ], answer: 1    },
+ {      q: "A purpose of standard costing is to:",
+options: ["A. Eliminate the need to account for year-end under-applied or over-applied manufacturing overhead.",        
+	  "B. Simplify costing procedures.",
+	  "C. Eliminate the need for actual costing for external reporting purposes.",        
+	  "D. Replace budgets and budgeting."  ], answer: 1    },
+ {      q: "Which one of the following is not a role played by an investment bank?",
+options: ["A. Buying the securities from the issuer and then reselling them in the market.",        
+	  "B. Advising the issuer on the terms and the timing of the offering.",
+	  "C. Distributing newly issued securities to the public.",        
+	  "D. Investing in a diversified portfolio on behalf of its shareholders."  ], answer: 3    },
+ {      q: "All of the following are characteristics of tax except:",
+options: ["A. Certain taxes are imposed to achieve specific objectives such as reducing consumption of luxurious goods.",        
+	  "B. Tax is a legal collection that can be levied only by the federal government not by anyone else including regional government.",
+	  "C. Tax is a compulsory contribution by the taxpayers to the government.",        
+	  "D. For the payment of tax, there is no direct return to the taxpayers."  ], answer: 1    },
+ {      q: "Which of the following statements is FALSE regarding the objective of financial reporting by public sector?",
+options: ["A. The objectives of financial reporting by public sector entities are to provide information about the entity that is useful to users of GPFRS for decision-making purposes.",        
+	  "B. The objectives of financial reporting by public sector entities are to provide information about the entity that is useful to users of GPFRS for accountability purposes.",
+	  "C. The identification of accountability as an objective of financial reporting reflects that most governments and public sector entities have a profit-seeking rather than service delivery objective.",        
+	  "D. The identification of accountability as an objective of financial reporting reflects the fact that most governments and public sector entities have their funding mainly through taxation, but also transfers from other tiers of government."  ], answer: 2    },
+ {      q: "Which of the following is correct, if MAMA Share Company issued 1,000 shares of Birr 100 par value ordinary shares receiving a total amount of Birr 120,000?",
+options: ["A. Retained earnings account is credited for Birr 20,000",        
+	  "B. Ordinary share capital account is credited for Birr 120,000",
+	  "C. The transaction results in a gain of Birr 20,000",        
+	  "D. Total shareholders’ equity increases by Birr 120,000"  ], answer: 3    },
+ {      q: "Which of the following is correct?",
+options: ["A. Analytical review is sufficient evidence for a reasonable assurance audit",        
+	  "B. Limited assurance audit opinion is worded negatively",
+	  "C. Auditors apply professional judgment only on deciding on the type of opinion.",        
+	  "D. Limited assurance audit is acceptable for organizations of all size"  ], answer: 1    },
+{      q: "If businesses are governed by the marketplace, governments are governed by:",
+options: ["A. State constitutions",        
+	  "B. Budgets",
+	  "C. Legislative bodies",        
+	  "D. Taxes"  ], answer: 1    },
+{      q: "In making such decisions, products should be ranked based on:",
+options: ["A. Contribution margin per unit of the constraining resource",        
+	  "B. Selling price per unit",
+	  "C. Contribution margin per unit",        
+	  "D. unit sales volume"  ], answer: 0    },
+{      q: "Which of the following is FALSE about short-term financing?",
+options: ["A. Short-term credit agreements are generally more restrictive than long-term credit agreements",        
+	  "B. If funds are needed in a hurry, the firm should look to the short-term markets.",
+	  "C. If a firm thinks its need for funds will diminish in the near future, it should choose short-term debt.",        
+	  "D. Interest costs at the time the funds are obtained will be lower if the firm borrows on a short-term rather than a long-term basis"  ], answer: 0    },
+{      q: "Aster is an employee in one of the government organizations in Ethiopia. Her monthly salary is Birr 4,000. During Tir 2015 she worked on Public holiday for 10 hours. She has a position allowance of Birr 1000.Aster is a member of the saving and credit association of the organization in which she works and decided to save 10% of her salary. She is expected to work 160 hours per month and she worked accordingly. What is the amount of overtime related to Aster's payment?",
+options: ["A. Birr 950",        
+	  "B. Birr 781.25",
+	  "C. Birr 500",        
+	  "D. Birr 625"  ], answer: 3    },
+{      q: "Auditors basically accumulate evidence to:",
+options: ["A. Reach a conclusion about the fairness of the financial statements",        
+	  "B. Defend themselves in the event of a court case",
+	  "C. Satisfy the requirements of code of ethical conduct",        
+	  "D. Determine if the financial statements are correct"  ], answer: 0    },
+{      q: "Yene Company purchased land containing an estimated 1,000,000 tons of ore for a cost of Birr 10,500,000. The land without the ore is estimated to be worth Bir 500,000. During its first year of operation, the company mined and sold 300,000 tons of ore. What is the amount of depletion expense that Yene Company should record the year?",
+options: ["A. Birr 7,000,000",        
+	  "B. Birr 3,150,000",
+	  "C. Birr 10,000,000",        
+	  "D. Birr 3,000,000"  ], answer: 0    },
+{      q: "Which of the following is FALSE about public finance?",
+options: ["A. Public finance deals with the wants and the satisfaction of households and firms.",        
+	  "B. Public finance is the study of income and the expenditure of the government.",
+	  "C. Fiscal operations and fiscal policies are integral part of public finance.",        
+	  "D. Public finance aims at maximizing social welfare or social benefit by efficient use of public goods"  ], answer: 0    },
+{      q: "An entity grants 1,000 share options to each of its five directors on July 1, 2014. The options vest on June 30, 2018. The fair value of each option on July 1, 2014, is Birr 5, and it is anticipated that all of the share options will vest on June 30, 2018. What will be the accounting entry in the financial statements for the year ended June 30, 2015?",
+options: ["A. Increase equity Birr 6,250, increase in expense statement of comprehensive income Birr 6,250.",        
+	  "B. Increase equity Birr 5,000, increase in expense statement of comprehensive income Birr 5,000",
+	  "C. Increase equity Birr 25,000, increase in expense statement of comprehensive income Birr 25,000.",        
+	  "D. Increase equity zero, increase in expense statement of comprehensive income zero."  ], answer: 0    },
+{      q: "Which of the following is the common characteristic of all financial markets?",
+options: ["A. It allows common stock to be traded.",        
+	  "B. It allows loans to be made.",
+	  "C. It channels funds from lenders-savers to borrowers-spenders.",        
+	  "D. It determines the level of interest rates"  ], answer: 0    },
+{      q: "Which of the following statements is FALSE regarding the definition of a fund?",
+options: ["A. A fund is an accounting entity that is used for one year only and each year a new set of funds must be established.",        
+	  "B. A fund is a fiscal entity used to account for a subset of an organization's resources that is to be used for a specific purpose.",
+	  "C. A fund has a self-encompassing, self-balancing accounting equation.",        
+	  "D. A fund is an accounting entity for which financial statements can be prepared."  ], answer: 0    },
+{      q: "A Company has cash in bank of Birr 20,000, restricted cash in a separate account of Birr 6,000, and a bank overdraft in an account at another bank of Birr 2,000. The company should report cash of:",
+options: ["A. Birr 26,000",        
+	  "B. Birr 18,000",
+	  "C. Birr 20,000",        
+	  "D. Birr 24,000"  ], answer: 1    },
+{      q: "Which of the following statements is most consistent with efficient inventory management? The firm has:",
+options: ["A. Relatively low days sales outstanding (DSO)",        
+	  "B. Relatively high current ratio",
+	  "C. Below average inventory turnover ratio",        
+	  "D. Low incidence of production schedule"  ], answer: 3    },
+{      q: "Which one of the following is FALSE?",
+options: ["A. The risk of material misstatement is a function of inherent and control risk",        
+	  "B. A financial statement that contain immaterial misstatement is not considered to show true and fair view",
+	  "C. Knowledge about the client's industry is an essential factor for a successful audit",        
+	  "D. Audit planning can keep audit costs reasonable"  ], answer: 1    },
+{      q: "Which of the following is not a function of a financial system?",
+options: ["A. Investment function",        
+	  "B. Risk elimination function",
+	  "C. Payment function",        
+	  "D. Saving function"  ], answer: 1    }
       ]
   },
   Economic: {
