--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
           <option value="v6">Model Exam </option>
         </select>
         <button onclick="login()">Login</button></br>
+		<h3>To Economics Teachers to get update clik </h3><a href="https://cbeonlineexam.onrender.com/">Here</a>  username: edemo and Password: 1234</h3>
         <a href="mailto:dan7get@gmail.com?subject=Hello%20from%20Astra&body=Write%20your%20message%20here">Send Email</a>
 
 
