--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
           <option value="v6">Model Exam </option>
         </select>
         <button onclick="login()">Login</button></br>
-		<h3>To Economics Teachers to get update clik </h3><a href="https://cbeonlineexam.onrender.com/">Here</a>  username: edemo and Password: 1234</h3>
-        <a href="mailto:dan7get@gmail.com?subject=Hello%20from%20Astra&body=Write%20your%20message%20here">Send Email</a>
+		<h3>To Economics Teachers to get update clik </h3><a href="https://cbeonlineexam.onrender.com/">Here</a>  username: edemo and Password: 1234</h3> </br></br>
+        <h3>To contact me   </h3></h3><a href="mailto:dan7get@gmail.com?subject=Hello%20from%20Astra&body=Write%20your%20message%20here">Send Email</a>
 
 
       </div>
